# RayTracer

./: .gitmodules  CMakeLists.txt  LICENSE
include/: Shapes.h  Types.h
shaders/: ray_texture.frag  ray_texture.vert  ray_trace.frag
src/: CMakeLists.txt  Shapes.cpp  main.cpp
